unpackaged/main/default/objects/Campaign_Case__c/fields/Facility_of_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Facility_of_Treatment__c</fullName>
    <description>Used to determine the facility they were treated at.  This can be used separate from the facility they were diagnosed at.  Depends on the needs of the case.  If the Client was diagnosed and treated in the same facility, it should be used as a default to &quot;Facility of Diagnosis&quot; and not this.</description>
    <inlineHelpText>Facility the client was treated at, not diagnosed.</inlineHelpText>
    <label>Facility of Treatment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>