unpackaged/main/default/objects/Campaign_Case__c/fields/Health_History__c.field-meta.xml
<CustomField>
    <fullName>Health_History__c</fullName>
    <description>Used to allow reps to select from person and family history options to provide any evidence of diagnosis or behaviors that may attribute to the case.</description>
    <inlineHelpText>Personal and Family Health History</inlineHelpText>
    <label>Health History</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Family_History</valueSetName>
    </valueSet>
</CustomField>