unpackaged/main/default/objects/Campaign_Case__c/fields/Health_History_Check__c.field-meta.xml
<CustomField>
    <fullName>Health_History_Check__c</fullName>
    <description>Used to determine health history questions about a person. This could include personal health habits like smoking, attributes like asthma, or even experiences like skydiving or construction work.</description>
    <inlineHelpText>Check on the their health history.</inlineHelpText>
    <label>Health History Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Personal_Attributes_or_Experience</valueSetName>
    </valueSet>
</CustomField>