unpackaged/main/default/objects/Campaign_Case__c/fields/Hours_Used__c.field-meta.xml
<CustomField>
    <fullName>Hours_Used__c</fullName>
    <description>Hours used is a breakout question to determine how much time is spent with product and should be used in conjunction with other time fields of use to formulate total exposure or other liability questions.</description>
    <inlineHelpText>Average hours used to work with other time fields for liability measurements.</inlineHelpText>
    <label>Hours Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>