unpackaged/main/default/objects/Campaign_Case__c/fields/How_First_Learned_Of_Cause__c.field-meta.xml
<CustomField>
    <fullName>How_First_Learned_Of_Cause__c</fullName>
    <description>Added for Duddy &amp; Czarnecki integration - 07/18/2024</description>
    <inlineHelpText>For your attorneys to determine your potential filing deadline, we need to explore when you learned about a potential connection between you and your case.</inlineHelpText>
    <label>How First Learned Of Cause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>