unpackaged/main/default/objects/Campaign_Case__c/fields/Injury_Onset_Date__c.field-meta.xml
<CustomField>
    <fullName>Injury_Onset_Date__c</fullName>
    <description>Date of which an injury was first noticed. Not diagnosed, but recognized. This is the date at which it started in order to get a diagnosis. (D&amp;C needed question)</description>
    <inlineHelpText>Date of which an inury was recognized, NOT diagnosed.</inlineHelpText>
    <label>Injury Onset Date</label>
    <type>Date</type>
</CustomField>