unpackaged/main/default/objects/Campaign_Case__c/fields/Insurance_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Coverage__c</fullName>
    <description>Defines the type of insurance coverage that may need to be represented on cases to determine qualification and support for the case.</description>
    <inlineHelpText>Type of insurance coverage that is had by injured party</inlineHelpText>
    <label>Insurance Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Insurance_Coverage</valueSetName>
    </valueSet>
</CustomField>