unpackaged/main/default/objects/Campaign_Case__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is used to attach campaign cases to the intake forms to store and pass data from questions or intake into the attached Case.</description>
    <inlineHelpText>The intake case is attached to.</inlineHelpText>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipLabel>Campaign Cases</relationshipLabel>
    <relationshipName>Campaign_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>