unpackaged/main/default/objects/Campaign_Case__c/fields/Involved_Brands__c.field-meta.xml
<CustomField>
    <fullName>Involved_Brands__c</fullName>
    <description>Used to select all brands involved in a case.  Controlled in a globabl list and should be for scenarios where all items should be known and is not a qualifying criteria.  For qualifying criteria a single select list should be used.</description>
    <inlineHelpText>All brands that have been used or involved in a case</inlineHelpText>
    <label>Involved Brands</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand_Lists</valueSetName>
    </valueSet>
</CustomField>