unpackaged/main/default/objects/Campaign_Case__c/fields/Last_Date_of_Recurrence__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_of_Recurrence__c</fullName>
    <description>Marks the last date the last symptom came back or when the last accident happened.</description>
    <inlineHelpText>Last day the client experienced the case cause.</inlineHelpText>
    <label>Last Date of Recurrence</label>
    <type>Date</type>
</CustomField>