unpackaged/main/default/objects/Campaign_Case__c/fields/Licensing_Information__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Information__c</fullName>
    <description>Used to provide information on proper licensing to validate qualifications of proper use and registry.</description>
    <inlineHelpText>Type of licensing used in case qualifications.</inlineHelpText>
    <label>Licensing Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Licensing_Information</valueSetName>
    </valueSet>
</CustomField>