unpackaged/main/default/objects/Campaign_Case__c/fields/Living_Locations_and_Proximity__c.field-meta.xml
<CustomField>
    <fullName>Living_Locations_and_Proximity__c</fullName>
    <description>This field houses items to determine location or proximity to areas lived in or where things occurred during residency.</description>
    <label>Living Locations and Proximity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Locations_and_Areas</valueSetName>
    </valueSet>
</CustomField>