unpackaged/main/default/objects/Campaign_Case__c/fields/Method_of_Application__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Application__c</fullName>
    <description>This is to reference and standardize questions around the activity the product was used in.  I.e. if it was agricultural use, topical use, etc.</description>
    <inlineHelpText>In what situation or activity was product used in</inlineHelpText>
    <label>Method of Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area_of_Application</valueSetName>
    </valueSet>
</CustomField>