unpackaged/main/default/objects/Campaign_Case__c/fields/Mother_s_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Date_of_Birth__c</fullName>
    <description>Date of birth used in age calculations.  Helps determine ages for current use in qualifying or verification of case info.</description>
    <inlineHelpText>Patient&#39;s Mother&#39;s date of birth</inlineHelpText>
    <label>Mother&#39;s Date of Birth</label>
    <type>Date</type>
</CustomField>