unpackaged/main/default/objects/Campaign_Case__c/fields/Mother_s_Health_History__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Health_History__c</fullName>
    <description>Used to allow reps to select from person and family history options to provide any evidence of diagnosis or behaviors that may attribute to the case. This is specific to the mother&#39;s health history for the mother on any cases related to children.</description>
    <inlineHelpText>Health History specific to the mother</inlineHelpText>
    <label>Mother&#39;s Health History</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Family_History</valueSetName>
    </valueSet>
</CustomField>