unpackaged/main/default/objects/Campaign_Case__c/fields/Name_of_Location_Affected__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Location_Affected__c</fullName>
    <description>FLOW ONLY. Used to store values from flow questionnaires that act like picklists and input values for scale building. We want to reuse this field for &quot;Environmental Disasters&quot; category.  We can use this for all cases now as long as we control it view a flow.</description>
    <inlineHelpText>What the location is called that the occurrence happened in.</inlineHelpText>
    <label>Name of Location Affected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>