unpackaged/main/default/objects/Campaign_Case__c/fields/Number_of_Times_Used__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Times_Used__c</fullName>
    <description>This is used for measurement of the number of times a product is used.  This should be used in conjunction of time or amount formular fields of use.  I.e. 4 times  8 year used equals 32 uses</description>
    <inlineHelpText>Number of times a product was used in a given period</inlineHelpText>
    <label>Number of Times Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>