unpackaged/main/default/objects/Campaign_Case__c/fields/PAC_Check_1__c.field-meta.xml
<CustomField>
    <fullName>PAC_Check_1__c</fullName>
    <description>Field is used to store values selected uring a PAC Check question that will help determine which Partner to prioritize or not.  To be potentially used in distribution models.</description>
    <inlineHelpText>PAC value that helps determine what Partner to send to.</inlineHelpText>
    <label>PAC Check 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PAC_Check</valueSetName>
    </valueSet>
</CustomField>