unpackaged/main/default/objects/Campaign_Case__c/fields/Patient_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Patient_Date_of_Birth__c</fullName>
    <description>Date of birth for the case and to be used as the patient&#39;s date of birth.  Can be used in automation and auto fill the client listed on the Intake for records purpose.  We need easier methods to track info.  We can delete this if we don&#39;t find a full use for it in the Case form fill outs.</description>
    <inlineHelpText>Holds the Patient&#39;s date of birth</inlineHelpText>
    <label>Patient Date of Birth</label>
    <type>Date</type>
</CustomField>