unpackaged/main/default/objects/Campaign_Case__c/fields/Patient_Date_of_Death__c.field-meta.xml
<CustomField>
    <fullName>Patient_Date_of_Death__c</fullName>
    <description>Used when calling on behalf of a party that has passed away.  This will auto calculate the dates with any birth or diagnosis dates.</description>
    <inlineHelpText>Date the patient in question passed.</inlineHelpText>
    <label>Patient Date of Death</label>
    <type>Date</type>
</CustomField>