unpackaged/main/default/objects/Campaign_Case__c/fields/PH_HR_Age_of_First_Use__c.field-meta.xml
<CustomField>
    <fullName>PH_HR_Age_of_First_Use__c</fullName>
    <description>Place Holder for Hair Relaxer fields for unrevised questionnaires</description>
    <label>PH HR Age of First Use</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>