unpackaged/main/default/objects/Campaign_Case__c/fields/PH_HR_Cancer_Addresses__c.field-meta.xml
<CustomField>
    <fullName>PH_HR_Cancer_Addresses__c</fullName>
    <description>Place Holder for Hair Relaxer fields for unrevised questionnaires</description>
    <label>PH HR Cancer Addresses</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>