unpackaged/main/default/objects/Campaign_Case__c/fields/PH_HR_Currently_Use_HR__c.field-meta.xml
<CustomField>
    <fullName>PH_HR_Currently_Use_HR__c</fullName>
    <description>Place Holder for Hair Relaxer fields for unrevised questionnaires</description>
    <label>PH HR Currently Use HR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Generic_Responses</valueSetName>
    </valueSet>
</CustomField>