unpackaged/main/default/objects/Campaign_Case__c/fields/PH_HR_How_often_Used__c.field-meta.xml
<CustomField>
    <fullName>PH_HR_How_often_Used__c</fullName>
    <description>Place Holder for Hair Relaxer fields for unrevised questionnaires</description>
    <label>PH HR How often Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other frequency</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Four times per year</fullName>
            </value>
            <value>
                <fullName>Less than four times per year (disqualify)</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>