unpackaged/main/default/objects/Campaign_Case__c/fields/PH_HR_Not_Continuous_Use_Dates__c.field-meta.xml
<CustomField>
    <fullName>PH_HR_Not_Continuous_Use_Dates__c</fullName>
    <description>Place Holder for Hair Relaxer fields for unrevised questionnaires</description>
    <label>PH HR Not Continuous Use Dates</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>