unpackaged/main/default/objects/Campaign_Case__c/fields/PH_HR_Number_of_Primary_Physicians__c.field-meta.xml
<CustomField>
    <fullName>PH_HR_Number_of_Primary_Physicians__c</fullName>
    <description>Place Holder for Hair Relaxer fields for unrevised questionnaires</description>
    <label>PH HR Number of Primary Physicians</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>