unpackaged/main/default/objects/Campaign_Case__c/fields/PH_HR_Profession_of_Injured_Party__c.field-meta.xml
<CustomField>
    <fullName>PH_HR_Profession_of_Injured_Party__c</fullName>
    <description>Place Holder for Hair Relaxer fields for unrevised questionnaires</description>
    <label>PH HR Profession of Injured Party</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>