unpackaged/main/default/objects/Campaign_Case__c/fields/PH_HR_Provider_Policy__c.field-meta.xml
<CustomField>
    <fullName>PH_HR_Provider_Policy__c</fullName>
    <description>Place Holder for Hair Relaxer fields for unrevised questionnaires</description>
    <label>PH HR Provider Policy #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>