unpackaged/main/default/objects/Campaign_Case__c/fields/PH_HR_Represented_for_Talcum__c.field-meta.xml
<CustomField>
    <fullName>PH_HR_Represented_for_Talcum__c</fullName>
    <description>Place Holder for Hair Relaxer fields for unrevised questionnaires</description>
    <label>PH HR Represented for Talcum</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Currently signed with another firm</fullName>
            </value>
            <value>
                <fullName>Not currently signed with another firm regarding this matter</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>