unpackaged/main/default/objects/Campaign_Case__c/fields/PH_HR_Used_at_least_Years_prior_DX__c.field-meta.xml
<CustomField>
    <fullName>PH_HR_Used_at_least_Years_prior_DX__c</fullName>
    <description>Used for RU remission year question 4/2 VP
Place Holder for Hair Relaxer fields for unrevised questionnaires</description>
    <label>PH HR Used at least Years prior DX</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Generic_Responses</valueSetName>
    </valueSet>
</CustomField>