unpackaged/main/default/objects/Campaign_Case__c/fields/PH_TY_Autism_Level__c.field-meta.xml
<CustomField>
    <fullName>PH_TY_Autism_Level__c</fullName>
    <description>Place Holder for Tylenol fields for unrevised questionnaires. These should be moved out to a proper field use later on, these are open ended questions that do not fit any standardization and only work for specific campaign.</description>
    <label>PH TY Autism Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Generic_Responses</valueSetName>
    </valueSet>
</CustomField>