unpackaged/main/default/objects/Campaign_Case__c/fields/PH_TY_Current_Age_of_Child__c.field-meta.xml
<CustomField>
    <fullName>PH_TY_Current_Age_of_Child__c</fullName>
    <description>Place Holder for Tylenol fields for unrevised questionnaires. These should be moved out to a proper field use later on, these are open ended questions that do not fit any standardization and only work for specific campaign.</description>
    <label>PH TY Current Age of Child</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>