unpackaged/main/default/objects/Campaign_Case__c/fields/PH_TY_Mother_Age_at_Birth__c.field-meta.xml
<CustomField>
    <fullName>PH_TY_Mother_Age_at_Birth__c</fullName>
    <description>Place Holder for Tylenol fields for unrevised questionnaires. These should be moved out to a proper field use later on, these are open ended questions that do not fit any standardization and only work for specific campaign.</description>
    <label>PH TY Mother Age at Birth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>