unpackaged/main/default/objects/Campaign_Case__c/fields/Pre_Existing_Condition__c.field-meta.xml
<CustomField>
    <fullName>Pre_Existing_Condition__c</fullName>
    <description>Used as a qualifier question.  This helps us determine if there are pre-existing conditions that we need to be made aware of.  These conditions can affect the case acceptance.  This field should avoid using specifics since the questionnaires house specifics.</description>
    <inlineHelpText>Do they have conditions prior to diagnosis that would disqualify them?</inlineHelpText>
    <label>Pre-Existing Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>