unpackaged/main/default/objects/Campaign_Case__c/fields/Pregnancy_Health_History__c.field-meta.xml
<CustomField>
    <fullName>Pregnancy_Health_History__c</fullName>
    <description>Used to allow reps to select from person and family history options to provide any evidence of diagnosis or behaviors that may attribute to the case.  This is specific to Pregnancy history for the mother on any cases related to pregnancies and/or children.</description>
    <inlineHelpText>Health History specific to pregnancies</inlineHelpText>
    <label>Pregnancy Health History</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Family_History</valueSetName>
    </valueSet>
</CustomField>