unpackaged/main/default/objects/Campaign_Case__c/fields/Product_Features_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Product_Features_Attributes__c</fullName>
    <description>Used in the questionnaire for when we collect information on what features or attributes a product had that may affect litigation and even determine scoring.</description>
    <inlineHelpText>Features and Attributes related to the product and how it can be used</inlineHelpText>
    <label>Product Features/Attributes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Attributes</valueSetName>
    </valueSet>
</CustomField>