unpackaged/main/default/objects/Campaign_Case__c/fields/Purchase_Location__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Location__c</fullName>
    <description>Used to determine the locations of the purchas to find out specific vendors, stores, or types of companies that interacted with the client or case. Can allow reporting on common themes of where tainted products, common vendors etc that facilitated the issue and allow for further targeting.</description>
    <inlineHelpText>Location of Purchase| Store, vendor, etc.</inlineHelpText>
    <label>Purchase Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Purchase_Information</valueSetName>
    </valueSet>
</CustomField>