unpackaged/main/default/objects/Campaign_Case__c/fields/Recurrence_Check__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Check__c</fullName>
    <description>Used to help determine if there have been any recurrence of a symptom or incident with products.  It does not have to be specific to a diagnosis/cancer, but can be accidents and/or injuries also.</description>
    <inlineHelpText>Has a symptom or incident recurred?</inlineHelpText>
    <label>Recurrence Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>