unpackaged/main/default/objects/Campaign_Case__c/fields/Related_Diagnosis_1__c.field-meta.xml
<CustomField>
    <fullName>Related_Diagnosis_1__c</fullName>
    <description>Used to house Diagnoses that are related to the primary diagnosis.  This allows sub-categories of a diagnosis or injury.</description>
    <inlineHelpText>Sub-Category of the primary diagnosis.  Related illness.</inlineHelpText>
    <label>Related Diagnosis 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sub_Diagnosis</valueSetName>
    </valueSet>
</CustomField>