unpackaged/main/default/objects/Campaign_Case__c/fields/Related_Symptom__c.field-meta.xml
<CustomField>
    <fullName>Related_Symptom__c</fullName>
    <description>Used to show related symptoms to any work or treatments performed along with non official diagnosis considerations.</description>
    <inlineHelpText>Symptom related to treatment, illness, or non official diagnosis</inlineHelpText>
    <label>Related Symptom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Related_Symptom</valueSetName>
    </valueSet>
</CustomField>