unpackaged/main/default/objects/Campaign_Case__c/fields/Related_Testing_Results__c.field-meta.xml
<CustomField>
    <fullName>Related_Testing_Results__c</fullName>
    <description>Used for related items tied to case litigation or other areas of information needed.  Not used in Health testing or results, but specific to water, product, safety, etc. tests.</description>
    <label>Related Testing Results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Results_and_Tests</valueSetName>
    </valueSet>
</CustomField>