unpackaged/main/default/objects/Campaign_Case__c/fields/Relationship_to_Location__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Location__c</fullName>
    <description>FLOW ONLY: This is used in flow questionnaires to help determine the relationship a person has with the location. It designates how we route and value the case.  If it is a Homeowner, Renter, etc. determines how we manage the case. Can be applied to other objects, but used to help us to determine litigation strategies.</description>
    <inlineHelpText>Relationship the client has with the location</inlineHelpText>
    <label>Relationship to Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>