unpackaged/main/default/objects/Campaign_Case__c/fields/Smoker_Check__c.field-meta.xml
<CustomField>
    <fullName>Smoker_Check__c</fullName>
    <description>Used to determine if client is, was, or exposed to smoker.  Help determine some health history for cases.</description>
    <inlineHelpText>History of smoking</inlineHelpText>
    <label>Smoker Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Former Smoker</fullName>
            </value>
            <value>
                <fullName>Home of Smoker</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>